--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
             try {
                 let chatHistory = [{ role: "user", parts: [{ text: prompt }] }];
                 const payload = { contents: chatHistory };
-                const apiKey = ""; // API key will be provided by the environment
+                const apiKey = "AIzaSyBaZOmQks0_Zr4mitt7yPAL8cWOQfumJrE"; // API key will be provided by the environment
                 const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
 
                 const response = await fetch(apiUrl, {
@@ -466,3 +466,4 @@
     </script>
 </body>
 </html>
+
